--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "test": "mocha || true"
+    "test": "node_modules/.bin/mocha --exit"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
@@ -13,12 +13,10 @@
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "jade": "~1.11.0",
-    "mocha-mongoose": "^1.2.0",
     "mongoose": "^5.0.6",
     "morgan": "~1.7.0",
-    "ngrok": "^2.2.26",
     "serve-favicon": "~2.3.2",
-    "sinon": "^4.4.1",
+    "sinon": "^6.3.1",
     "twitter": "^1.7.1"
   },
   "devDependencies": {
